--- a/memory/index.html
+++ b/memory/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" style="text/css" href="styles.css"/>
+    <title>Memory Game</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <script src="index.js"></script>
+    <h3>Score: <span id="result"></span></h3>
+    <div id="grid"></div>
+    <script src="app.js"></script>
 </body>
 </html>
